maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:81: error: too many arguments for method effaceMessage: ()Unit
    effaceMessage(posX, posY-1)
                 ^